--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,22 +7,21 @@
 </div>-->
 
 <div class="top_banner">
-  <img src="/assets/images/banner.png" width="100%" class="hide" alt="">
+  <img src="assets/images/banner.png" width="100%" class="hide" alt="">
   <div class="content center_text">
     <h2>GHRS REORGANIZATION</h2>
     <h2>PLAYBOOK</h2>
   </div>
 </div>
 
-<div class="container m-space">
-  <div class="row"> 
+<div class="container p-space">
+  <div class="row">
     <div class="col-12">
       <h2>Introduction</h2>
     </div>
   </div>
   <div class="row">
     <div class="col-sm-6">
-
       <p>The purpose of this playbook is to provide a project based framework that outlines a consistent and effective
         process for HR activity in business reorganizations, for HR teams to leverage in planning and executing org
         design projects.</p>
@@ -56,8 +55,94 @@
     </div>
 
     <div class="col-sm-6">
-      <img src="/assets/images/intro.png" alt="">
+      <img src="assets/images/intro.png" alt="">
     </div>
+
+  </div>
+</div>
+
+
+<div class="bg-brand">
+  <div class="container p-space">
+    <div class="row">
+      <div class="col-12">
+        <h2>Partnering with the Business</h2>
+        <p>Recommended involvement of business stakeholders</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="tab">
+          <div class="tab-header">
+            <ul>
+              <li class="active">
+                <div class="tab-button">
+                  <div class="icon">
+                    <img src="assets/images/hr_selected.png" alt="">
+                  </div>
+                  <div class="title">Business HR Leaders</div>
+                </div>
+              </li>
+              <li>
+                <div class="tab-button">
+                  <div class="icon">
+                    <img src="assets/images/team.png" alt="">
+                  </div>
+                  <div class="title">Business Project Design Team</div>
+                </div>
+              </li>
+              <li>
+                <div class="tab-button">
+                  <div class="icon">
+                    <img src="assets/images/leader.png" alt="">
+                  </div>
+                  <div class="title">Business Leaders</div>
+                </div>
+              </li>
+              <li>
+                <div class="tab-button">
+                  <div class="icon">
+                    <img src="assets/images/manager.png" alt="">
+                  </div>
+                  <div class="title">Managers</div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="tab-body">
+            <div class="tab-content">
+              <h2>Business HR Leaders</h2>
+              <ul class="mt-3">
+                <li>Provides strategic leadership and expertise for the business; Strategic BHR Role LT level activities
+                </li>
+                <li>Sets HR strategy and governance for all people deliverables on project</li>
+                <li>HR deliverable approver and escalation for HR barriers</li>
+                <li>Ownership & accountability for HR delivery</li>
+                <li>Communicate key implications from business strategy to the project team</li>
+                <li>Monitor progress and adjust HR functional strategy as needed to optimize performance</li>
+                <li>Provides leadership and expertise on efficient people measures</li>
+              </ul>
+            </div>
+            <div class="tab-content hide">
+              2
+            </div>
+            <div class="tab-content hide">
+              3
+            </div>
+            <div class="tab-content hide">
+              4
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="p-space">
+  <div class="container">
+    <h2>ORGANIZATION DESIGN</h2>
+    <p>Process Overview</p>
 
   </div>
 </div>
