--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,23 @@
-.bg-brand
+.space-100{
+    height: 100px;
+}
+.space-50{
+    height: 50px;
+}
+.space-30{
+    height: 30px;
+}
+.space-70{
+    height: 70px;
+}
+.nav-height{
+    height: 80px;
+}
+.fixed-nav
 {
     background-color: #005f86;
     background-color: #fff;
-    box-shadow: 0 5px 4px 2px #ccccccad;
+    box-shadow: 0 5px 4px 2px #313131aa;
     position: fixed;
     left: 0;
     right: 0;
@@ -30,149 +45,4 @@ li.nav-item:hover, li.nav-item.active {
 }
 li.nav-item:hover a, li.nav-item.active a{
     color: #fff; 
-}
-
-.hide{
-    display: none; 
-}
-
-.header-background{
-    background-color: #f4f4f4;
-    text-align: justify;
-    border-top: 3px solid #a0138e;
-}
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
-    border-right: 1px solid rgba(0, 95, 134, 1);
-    background:#c6c6c6;
-    color: #005F86;
-    font-weight: 600;
-    font-size: 25px;
-    margin-bottom: 1rem;
-}
-.nav-link {
-    display: block;
-    padding: 0.3rem .5rem;
-}
-.card-img {
-   width: 100%;
-   border-radius: 0; 
-   height: 750px;
-   background-image: url('/assets/images/1.png');
-   background-attachment: fixed;
-   background-color:rgba(0, 95, 134, 1);
-   background-position: center;
-   background-size: cover;
-   position: relative;
-}
-.ghrs_text {
-    position: relative;
-    margin: 122px 0px 10px calc((100% - 980px) * 0.5);
-    left: 78px;
-    grid-area: 1 / 1 / 2 / 2;
-    justify-self: start;
-    align-self: start;
-}
-.txtNew {
-    word-wrap: break-word;
-    text-align: start;
-}
-.txtNew h1 {
-    margin: 0;
-    line-height: normal;
-    letter-spacing: normal;
-}
-.txtNew > * {
-    pointer-events: auto;
-}
-.font_4 {
-    font: normal normal normal 72px/1.25em raleway,sans-serif;
-    color: #005F86;
-    line-height:1.25em; 
-    text-align:center;
-    font-family:helvetica-w01-roman,helvetica-w02-roman,helvetica-lt-w10-roman,sans-serif;
-    
-}
-.color_11 {
-    color: #FFFFFF;   
-}
-.ghrs_text_shadow{
-    text-shadow:rgba(0, 0, 0, 0.298039) 0px 5px 0px;
-    font-weight:bold;
-}
-.play_text_shadow{
-    text-shadow:rgba(0, 0, 0, 0.298039) 0px 5px 0px;
-    font-size:45px;
-
-}
-.intro_img{
-    position: relative;
-    background-image: url('/assets/images/2.png');
-    width: 100%;
-}
-.intro-background{
-    position: relative;
-    background-color: #fff;
-    height: 850px;
-    color: #005F86;
-    width: 100%;
-}
-.space-100{
-    height: 100px;
-}
-.space-50{
-    height: 50px;
-}
-.space-30{
-    height: 30px;
-}
-.space-70{
-    height: 70px;
-}
-.intro_typical{
-    font-size: 20px;
-    margin-top: 2rem;
-    font-weight: 500;
-}
-.intro{
-    background-color: #005F86;
-    height: 852px;
-    width: 100%;
-}
-.intro_partnering{
-    background-color: #005F86;
-    margin-left: 1%;
-    margin-right: 1%;
-    height: 780px;
-    position: relative;
-}
-.intro_partnering_header{
-    color: #FFFFFF;
-    margin-left: 10%;
-}
-.intro_business{
-    background-color: #FFFFFF;
-}
-.text_align{
-    text-align: center;
-}
-.intro_hr{
-    background-color: #d6d6d6;
-    margin-left: 1%;
-    margin-right: 1%;
-    height: 780px;
-    position: relative;
-}
-.intro_hr_header{
-    margin-left: 10%;
-}
-.intro_box{
-    border: 1px #005F86;
-    background-color: #005F86;
-    color: #FFFFFF;
-    padding: 2rem;
-    border-top-right-radius: 25%;
-    border-bottom-left-radius: 25%;
-}
-.intro_box_mr{
-    margin-left: 2rem;
 }
