--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 
 .top_banner{
-    background-image: url('../../assets/images/banner.png');
+    background-image: url('~/assets/images/banner.png');
     background-position: center;
     /*background-attachment: fixed;*/
     background-repeat: no-repeat;
