--- a/src/app/home1/home1.component.html
+++ b/src/app/home1/home1.component.html
@@ -1,8 +1,8 @@
 <div class="image_slide" data-ride="carousel">
   <div class="top_banner">
     <h1 class="text-center text-white">
-        <span class="ghrs_text_shadow">GHRS <br>REORGANIZATION</span><br>
-        <span class="play_text_shadow">PLAYBOOK</span>
+      <span class="ghrs_text_shadow">GHRS <br>REORGANIZATION</span><br>
+      <span class="play_text_shadow">PLAYBOOK</span>
     </h1>
     <div class="bg-bottom"></div>
   </div>
@@ -10,33 +10,162 @@
 
 
 <section>
-  <div class="intro">
-    <div class="container">
+  <div class="container p-space">
+    <div class="row">
+      <div class="col-12">
+        <h2>Introduction</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6">
+        <p>The purpose of this playbook is to provide a project based framework that outlines a consistent and effective
+          process for HR activity in business reorganizations, for HR teams to leverage in planning and executing org
+          design projects.</p>
+        <div class="mt-5">
+          <p><b>The Playbook will support global HR professionals by increasing understanding of:</b></p>
+          <ul>
+            <li>
+              Typical HR work involved in business reorganizations and business partnerships with HR
+            </li>
+            <li>
+              Provide clarity within HR as to how HR teams can most efficiently and <br>
+              effectively partner with one another to
+              deliver </li>
+            <li>
+              HR roles involved and which HR domains deliver which work
+            </li>
+            <li>
+              Typical phasing and order of HR deliverables
+            </li>
+            <li>
+              Measurement examples
+            </li>
+            <li>
+              Locate and utilize existing tools
+            </li>
+            <li>
+              Allow for ongoing knowledge sharing
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="col-sm-6">
+        <img class="full-width" src="assets/images/intro.png" alt="">
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
+<section class="bg-grey project_team">
+  <div class="container">
+    <div class="padding_tb">
       <div class="row">
-        <div class="col-md-8">
-          <div class="intro_section padding_tb">
-            <h2>Introduction</h2>
-            <p>The purpose of this playbook is to provide a project based framework that outlines
-              a consistent and effective process for HR activity in business reorganizations, for HR
-              teams to leverage in planning and executing org design projects</p>
-            <p>The Playbook will support global HR professionals by increasing understanding of:</p>
-            <ul>
-              <li>Typical HR work involved in business reorganizations and business partnerships with HR</li>
-              <li>Provide clarity within HR as to how HR teams can most efficiently and effectively partner with one
-                another todeliver </li>
-              <li>HR roles involved and which HR domains deliver which work</li>
-              <li>Typical phasing and order of HR deliverables</li>
-              <li>Measurement examples</li>
-              <li>Locate and utilize existing tools</li>
-              <li>Allow for ongoing knowledge sharing</li>
-            </ul>
+        <div class="col-12">
+          <h2>Partnering with the Business</h2>
+          <h6>Recommended involvement of business stakeholders</h6>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-6 col-lg-3" >
+          <div class="clickable text-center" (click)="selectedpopup = 1">
+            <h4>Business HR Leader </h4>
+            <img src="assets/images/people1.png"          *ngIf="selectedpopup == 0 || selectedpopup == 1"  class="d-none d-lg-block" alt="">
+            <img src="assets/images/people1_selected.png" *ngIf="selectedpopup != 0 && selectedpopup != 1" class="d-none d-lg-block" alt="">
+            <img src="assets/images/user_1_md.png" class="d-block d-md-block d-lg-none" alt="">
           </div>
         </div>
+        <div class="col-6 col-lg-3">
+          <div class="clickable text-center" (click)="selectedpopup = 2">
+              <h4>Business Project Design Team </h4>
+            <img src="assets/images/people2.png"          *ngIf="selectedpopup == 0 || selectedpopup == 2" class="d-none d-lg-block" alt="">
+            <img src="assets/images/people2_selected.png" *ngIf="selectedpopup != 0 && selectedpopup != 2" class="d-none d-lg-block" alt="">
+            <img src="assets/images/user_2_md.png" class="d-block d-md-block d-lg-none" alt="">
+          </div>
+        </div>
+        <div class="col-6 col-lg-3">
+          <div class="clickable text-center" (click)="selectedpopup = 3">
+            <h4>Business Leaders</h4>
+            <img src="assets/images/people3.png"          *ngIf="selectedpopup == 0 || selectedpopup == 3" class="d-none d-lg-block" alt="">
+            <img src="assets/images/people3_selected.png" *ngIf="selectedpopup != 0 && selectedpopup != 3" class="d-none d-lg-block" alt="">
+            <img src="assets/images/user_3_md.png" class="d-block d-md-block d-lg-none" alt="">
+          </div>
+        </div>
+        <div class="col-6 col-lg-3">
+          <div class="clickable text-center" (click)="selectedpopup = 4">
+            <h4>Managers</h4>
+            <img src="assets/images/people4.png"          *ngIf="selectedpopup == 0 || selectedpopup == 4" class="d-none d-lg-block" alt="">
+            <img src="assets/images/people4_selected.png" *ngIf="selectedpopup != 0 && selectedpopup != 4" class="d-none d-lg-block" alt="">
+            <img src="assets/images/user_4_md.png" class="d-block d-md-block d-lg-none" alt="">
+          </div>
+        </div>
+
+        <div class="popup " *ngIf="selectedpopup != 0">
+          <div class="popup_panel relative ">
+              <button type="button" class="close" aria-label="Close" (click)="selectedpopup = 0">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            <div *ngIf="selectedpopup == 1">
+                <h3>Business HR Leader </h3>
+              <ul class="text-left pb-5 pr-5">
+                <li>Provides strategic leadership and expertise for the business; Strategic BHR Role LT level
+                  activities</li>
+                <li>Sets HR strategy and governance for all people deliverables on project</li>
+                <li>HR deliverable approver and escalation for HR barriers</li>
+                <li>Ownership & accountability for HR delivery</li>
+                <li>Communicate key implications from business strategy to the project team</li>
+                <li>Monitor progress and adjust HR functional strategy as needed to optimize performance</li>
+                <li>Provides leadership and expertise on efficient people measures</li>
+              </ul>
+            </div>
+            <div *ngIf="selectedpopup == 2">
+                <h3>Business Project Design Team </h3>
+              <ul class="text-left">
+                <li>Responsible for the project deliverables</li>
+                <li>Maintains an appropriate level of stakeholder engagement throughout the various project phases
+                </li>
+                <li>Develops detailed recommendations for leadership team approval in accordance with stage gate
+                  requirements</li>
+                <li>Conducts analysis to support: org design, span and layers optimization as related to an op model,
+                  spans and layers or org restructure business need and primarily responsible for financial modeling
+                  and
+                  process for tracking value</li>
+              </ul>
+            </div>
+            <div *ngIf="selectedpopup == 3">
+                <h3>Business Leaders</h3>
+              <ul class="text-left">
+                <li>Provides leadership and expertise on efficient organizational measures, comparison to
+                  competitors
+                  or internal Cargill benchmarks for business</li>
+                <li>Responsible to achieve cost/benefit value and any other key measures identified for project/team
+                  success</li>
+              </ul>
+            </div>
+            <div *ngIf="selectedpopup == 4">
+                <h3>Managers</h3>
+              <ul class="text-left">
+                <li>Provides strategic leadership and expertise for the business/department</li>
+                <li>Recommends key deliverables for their team to Business/Function Lead</li>
+                <li>Responsible for implementation of changes in team</li>
+                <li>Responsible for accurate HR data for their team</li>
+                <li>Responsible for partnering with Finance to track cost/benefit value and any other key measures
+                  identified for project success</li>
+                <li>Communication of change impacts to employee populations and individuals</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
   </div>
 </section>
 
+
+<!--
 
 <section class="bg-brand">
   <div class="container-fluid">
@@ -128,9 +257,9 @@
     </div>
   </div>
 </section>
+-->
 
-
-<section class="project_team">
+<section class="">
 
   <div class="padding_tb text-brand">
     <div class="container-fluid">
@@ -374,42 +503,87 @@
 <section>
   <div class="container">
     <div class="padding_tb">
-        <h2>What is Org Design?</h2>
-        <p class="mt-5 mb-5">Organization Design is a proactive fact-based approach to analyze an organizational structure in terms of process, governance  (decision rights), people effort, costs and operating model efficiency and effectiveness. This process ensures the business has the right capabilities and capacity to drive strategic success.</p>
-        <div class="row">
-            <div class="col-sm-4">
-                <p>Org Design is the right solution when an organization needs</p>
-                <ul>
-                    <li>To realign their people to a new strategy, market change or adapt due to competitive pressure</li>
-                    <li>To integrate or separate organizations due to MADJV</li>
-                    <li>To optimize a current structure to be more efficient and effective</li>
-                </ul>
-            </div>
-            <div class="col-sm-4">
-                <div class="border-lr">
-                    <p>Structure is only one element of an integrated system, the other dimensions being strategy, process, people and culture. The Organization Design methodology considers the interdependence with these other system dimensions, and follows the Project Delivery Process (PDP) stage gate model.</p>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <p>The Global OD Org Design Toolkit  provides a consistent, end-to-end process based org design methodology and toolkit for org design efforts in Cargill. It will assist in building capability in HR and business leaders to leverage strategic and operational org design as a business management best practice to support our growth and operational discipline goals.</p>
-            </div>
+      <h2>What is Org Design?</h2>
+      <p class="mt-5 mb-5">Organization Design is a proactive fact-based approach to analyze an organizational structure
+        in terms of process, governance (decision rights), people effort, costs and operating model efficiency and
+        effectiveness. This process ensures the business has the right capabilities and capacity to drive strategic
+        success.</p>
+      <div class="row">
+        <div class="col-sm-4">
+          <p>Org Design is the right solution when an organization needs</p>
+          <ul>
+            <li>To realign their people to a new strategy, market change or adapt due to competitive pressure</li>
+            <li>To integrate or separate organizations due to MADJV</li>
+            <li>To optimize a current structure to be more efficient and effective</li>
+          </ul>
         </div>
+        <div class="col-sm-4">
+          <div class="border-lr">
+            <p>Structure is only one element of an integrated system, the other dimensions being strategy, process,
+              people and culture. The Organization Design methodology considers the interdependence with these other
+              system dimensions, and follows the Project Delivery Process (PDP) stage gate model.</p>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <p>The Global OD Org Design Toolkit provides a consistent, end-to-end process based org design methodology and
+            toolkit for org design efforts in Cargill. It will assist in building capability in HR and business leaders
+            to leverage strategic and operational org design as a business management best practice to support our
+            growth and operational discipline goals.</p>
+        </div>
+      </div>
 
-        <div class="row mt-5">
-          <div class="col-12">
-            <div class="bg-brand p-5">
-              <div class="float-left">
-                <img src="assets/images/arrow.png" alt=""/>
-              </div>
-              <div class="ml-5">
-                  <p>Strategic Org Design refers to top down strategy based org design (clean sheet, strategic, building new capabilities) and includes redefining operating models and leadership team governance and structures.</p>
-                  <p>Operational Org Design refers to bottoms up evaluation of an organization, focusing on optimizing layers and simplifying structures or possibly consolidating work across teams in order to find efficiencies and greater effectiveness.</p>
-              </div>
+      <div class="row mt-5">
+        <div class="col-12">
+          <div class="bg-brand p-5">
+            <div class="float-left mr-5">
+              <img src="assets/images/arrow.png" alt="" />
+            </div>
+            <div class="">
+              <p>Strategic Org Design refers to top down strategy based org design (clean sheet, strategic, building new
+                capabilities) and includes redefining operating models and leadership team governance and structures.
+              </p>
+              <p>Operational Org Design refers to bottoms up evaluation of an organization, focusing on optimizing
+                layers and simplifying structures or possibly consolidating work across teams in order to find
+                efficiencies and greater effectiveness.</p>
             </div>
           </div>
         </div>
-
-
+      </div>
     </div>
   </div>
 </section>
+
+<!--
+<section>
+  <div class="container-fluid">
+    <div class="">
+      <div class="text-center">
+        <h2>ORGANIZATION DESIGN</h2>
+        <h3>Process Overview</h3>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6">
+        <div class="img1"></div>
+      </div>
+      <div class="col-6 bg-brand">
+        <div class="p-5">
+          <div class="row">
+            <div class="col-3">
+              <div class="cargill_white_box">
+                1
+              </div>
+            </div>
+            <div class="col-9 text-white">
+              <h3>ASSESS</h3>
+              <h3>Explore</h3>
+              <p>Assess current state and identify opportunities</p>
+              <p>Align with sponsors the case for change</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+-->
