--- a/src/app/process/process.component.css
+++ b/src/app/process/process.component.css
@@ -1,4 +1,19 @@
 .process_bar {
-    display: flex;
-  }
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.small_arrow{
+  margin-left: 5px;
+  margin-right: -20px;
+}
+
+.medium_arrow{
+  margin-left: 5px;
+  margin-right: -25px;
+}
+
+.normal_arrow{
+
+}
