--- a/src/app/process/process.component.html
+++ b/src/app/process/process.component.html
@@ -1,41 +1,41 @@
 <section>
   <div class="container mt-5">
     <div class="process_bar">
-      <div class="item">
-        <img src="assets/images/arrow_3.png" alt="">
+      <div class="item small_arrow">
+        <img class="" src="assets/images/arrow_1.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_2.png" alt="">
+      <div class="item normal_arrow">
+        <img class="" src="assets/images/arrow_2.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_3.png" alt="">
+      <div class="item medium_arrow">
+        <img class="" src="assets/images/arrow_3.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_2.png" alt="">
+      <div class="item normal_arrow">
+        <img  class=""  src="assets/images/arrow_2.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_3.png" alt="">
+      <div class="item medium_arrow">
+        <img class="" src="assets/images/arrow_3.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_2.png" alt="">
+      <div class="item normal_arrow">
+        <img  class=""  src="assets/images/arrow_2.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_1.png" alt="">
+      <div class="item small_arrow">
+        <img class="" src="assets/images/arrow_1.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_2.png" alt="">
+      <div class="item normal_arrow">
+        <img  class=""  src="assets/images/arrow_2.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_1.png" alt="">
+      <div class="item small_arrow">
+        <img class="" src="assets/images/arrow_1.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_2.png" alt="">
+      <div class="item normal_arrow">
+        <img  class=""  src="assets/images/arrow_2.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_1.png" alt="">
+      <div class="item medium_arrow">
+        <img class="" src="assets/images/arrow_3.png" alt="">
       </div>
-      <div class="item">
-        <img src="assets/images/arrow_2.png" alt="">
+      <div class="item normal_arrow">
+        <img  class=""  src="assets/images/arrow_4.png" alt="">
       </div>
     </div>
   </div>
